# ride-hailing-voice-agent

./: .gitignore  AGENT_PY_WALKTHROUGH.md  AGENT_TIMEOUT_FIX.md  CLAUDE.md  CONFIGURATION.md  CONVERSATION_ANALYSIS.md  GRAPH_CONSTRUCTION_WALKTHROUGH.md  PITCH.md  README.md  WHY_LIVEKIT.md  WINDOWS_START.md  nuke_and_restart.ps1  test-questions.md  voice-stack-overview.md
backend/langgraph-voice-call-agent/: .env.example  .gitignore  LICENSE  Makefile  README.md  chat.py  compose.yml  graph_visualization.mmd  langgraph.json  pyproject.toml  visualize_graph.py
backend/langgraph-voice-call-agent/src/langgraph/: agent.py  freenow_agent.py  my_rentals.db  portfolio_mcp_server.py  setup_db.py  str_agent.py
backend/langgraph-voice-call-agent/src/livekit/: __init__.py  agent.py
backend/langgraph-voice-call-agent/src/livekit/adapter/: __init__.py  langgraph.py
frontend/langgraph-voice-call-agent-web/: .env.local.example  .prettierrc  README.md  app-config.ts  (+3 more)
hostaway-ai-demo/: .env.example  README.md  agents.py  app.py  requirements.txt  setup_db.py
markdown_old/: AGENT_EXECUTION_FLOW.md  FINAL_STATUS.md  LANGGRAPH_CONNECTION_FIX.md  QUICK_START.md  README.md  RESTART_INSTRUCTIONS.md  SETUP.md  SKIP_DOWNLOAD.md  START_HERE.md  STATUS_AND_NEXT_STEPS.md  TIMEOUT_FIX_FINAL.md  TOOL_CALL_CLEANUP_FIX.md  TOOL_CALL_ERROR_FIX.md  TOOL_CALL_ERROR_FIX_V2.md  TOOL_CALL_FIX_FINAL.md  TURN_DETECTOR_FIX.md  TUTORIAL.md  TUTORIAL_BEGINNERS_GUIDE.md  UNDERSTANDING_AIMESSAGE.md  UNDERSTANDING_THE_ADAPTER.md  VISUALIZATION_WALKTHROUGH.md  VISUALIZE_GRAPH.md  WHERE_TO_RUN_COMMANDS.md
(+35 files in other folders)
