[project]
name = "langgraph-voice-call-agent"
version = "0.1.0"
description = "A real-time voice/call AI agent that lets you talk to a LangGraph agent over LiveKit — similar to 'voice mode' experiences in ChatGPT Voice, OpenAI Realtime API sessions, and Gemini Live. This project demonstrates adapting any LangGraph agent into a full-duplex, low-latency voice assistant using LiveKit Agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.3.8",
    "livekit>=1.0.12",
    "livekit-agents[cartesia,deepgram,openai,silero]~=1.2",
    "livekit-plugins-cartesia>=1.2.6",
    "livekit-plugins-deepgram>=1.2.6",
    "livekit-plugins-hume>=1.2.6",
    "livekit-plugins-langchain~=1.1",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=1.2.6",
    "livekit-plugins-silero>=1.2.6",
    "livekit-plugins-turn-detector>=1.2.6",
    "torch>=2.0.0",
    "python-dotenv>=1.1.1",
    "langchain-anthropic>=0.3.0",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "mcp>=1.0.0",
]
